syntax = "proto3";
package com.pim.domain;

message Users {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string phone = 6;
}

message UserCreated {
  Users user = 1;
}
